<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" >
        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PairedStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paired_status_title" />

            <TextView
                android:id="@+id/PairedStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_NA" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DeviceNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paired_device_name" />

            <TextView
                android:id="@+id/DeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_NA" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ConnectionStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_status_title" />

            <TextView
                android:id="@+id/ConnectionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_no" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ToggleConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_toggle_button_text" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/StartDiagnosticActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_diagnostic_activity_button_text" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>